--- a/app/src/main/res/layout/item_messenger.xml
+++ b/app/src/main/res/layout/item_messenger.xml
@@ -6,7 +6,7 @@
     android:layout_height="91.57dp">
 
     <ImageView
-        android:id="@+id/img_avatar"
+        android:id="@+id/img_avatar_messenger"
         android:layout_width="54dp"
         android:layout_height="55dp"
         android:layout_alignParentStart="true"
@@ -22,8 +22,6 @@
         android:layout_width="11dp"
         android:layout_height="11dp"
         android:layout_alignParentStart="true"
-
-
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="60dp"
@@ -32,30 +30,30 @@
         android:background="@drawable/btn_circle" />
 
     <TextView
-        android:id="@+id/tv_name"
+        android:id="@+id/tv_name_messenger"
         style="@style/TextStyle27"
         android:layout_width="116dp"
         android:layout_height="19dp"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="11dp"
         android:layout_marginTop="22dp"
-        android:layout_toRightOf="@+id/img_avatar"
+        android:layout_toRightOf="@+id/img_avatar_messenger"
         android:textColor="@color/darkish_pink" />
 
     <TextView
         style="@style/TextStyle28"
-        android:id="@+id/tv_messenger"
+        android:id="@+id/tv_messenger_messenger"
         android:layout_width="137dp"
         android:layout_height="16dp"
-        android:layout_below="@+id/tv_name"
+        android:layout_below="@+id/tv_name_messenger"
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="11dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="26dp"
-        android:layout_toRightOf="@+id/img_avatar" />
+        android:layout_toRightOf="@+id/img_avatar_messenger" />
 
     <TextView
-        android:id="@+id/tv_number"
+        android:id="@+id/tv_number_messenger"
         android:layout_width="17dp"
         android:layout_height="17dp"
         android:layout_alignParentTop="true"
@@ -74,10 +72,10 @@
     <TextView
         android:textSize="10sp"
         android:gravity="center"
-        android:id="@+id/tv_time"
+        android:id="@+id/tv_time_messenger"
         android:layout_width="wrap_content"
         android:layout_height="15dp"
-        android:layout_below="@+id/tv_number"
+        android:layout_below="@+id/tv_number_messenger"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
