--- a/app/src/main/res/layout/fragment_messenger.xml
+++ b/app/src/main/res/layout/fragment_messenger.xml
@@ -24,6 +24,7 @@
             android:backgroundTintMode="screen" />
     </RelativeLayout>
     <androidx.recyclerview.widget.RecyclerView
+        android:layoutAnimation="@anim/layout_animation"
         android:id="@+id/rv_messenger"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
