--- a/app/src/main/res/drawable/ic_btn_messenger_animation.xml
+++ b/app/src/main/res/drawable/ic_btn_messenger_animation.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/btn_messenger"
+    <item android:drawable="@drawable/ic_btn_messenger"
         android:state_checked="true"
         />
-    <item android:drawable="@drawable/btn_messenger2"
+    <item android:drawable="@drawable/ic_btn_messenger2"
         android:state_checked="false"
         />
 </selector>
