--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,19 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity2">
+    tools:context=".SignUpActivity">
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gn_guideline1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="50dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gn_guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="50dp" />
 
     <ImageView
+        android:scaleType="fitXY"
         android:id="@+id/imageView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/ing_blob_bg"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        android:src="@drawable/bg_blob"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+         />
     <ImageView
         android:id="@+id/imageView5"
         android:layout_width="wrap_content"
@@ -33,7 +46,7 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="128dp"
-        android:src="@drawable/profilemain"
+        android:src="@drawable/img_profilemain"
         app:layout_constraintBottom_toBottomOf="@+id/imageView4"
         app:layout_constraintEnd_toEndOf="@+id/imageView5"
         app:layout_constraintStart_toStartOf="@+id/imageView5"
@@ -42,10 +55,10 @@
 
     <ImageButton
         android:id="@+id/img_back"
-        android:background="@drawable/img_group_4"
+        android:background="@drawable/img_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/img_group_4"
+        android:src="@drawable/img_back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.045"
@@ -57,147 +70,135 @@
         android:gravity="left"
         android:background="#80FFFFFF"
         android:textColor="@color/dark_blue_grey"
-        android:textSize="10sp"
+        android:textSize="15sp"
         android:lineHeight="10sp"
         style="@style/TextStyle19"
-        android:layout_width="80dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
         android:layout_marginTop="334dp"
-        android:layout_marginRight="278dp"
         android:layout_marginBottom="500dp"
         android:text="FULL NAME"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintRight_toRightOf="@id/gn_guideline2"
+        app:layout_constraintLeft_toLeftOf="@id/gn_guideline1"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/full_name"
         android:inputType="text"
-        android:layout_width="98dp"
-        android:layout_height="19.77dp"
-        android:layout_marginLeft="30dp"
+        android:layout_width="0dp"
+        android:layout_height="20dp"
         android:layout_marginTop="355dp"
-        android:layout_marginRight="247dp"
         android:layout_marginBottom="469dp"
         android:background="@null"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintRight_toRightOf="@id/gn_guideline2"
+        app:layout_constraintLeft_toLeftOf="@id/gn_guideline1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
     <View
-        android:layout_width="315dp"
+        android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="387dp"
         android:layout_marginBottom="456.3dp"
         android:background="@color/black_two"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintRight_toRightOf="@id/gn_guideline2"
+        app:layout_constraintLeft_toLeftOf="@id/gn_guideline1"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:gravity="left"
         android:textColor="@color/dark_blue_grey"
         style="@style/TextStyle19"
-        android:layout_width="96dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
+        android:textSize="15dp"
         android:layout_marginTop="420dp"
-        android:layout_marginRight="249dp"
         android:text="MAIL ADDRESS"
         android:layout_marginBottom="414dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintRight_toRightOf="@id/gn_guideline2"
+        app:layout_constraintLeft_toLeftOf="@id/gn_guideline1"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
+        android:textSize="15dp"
         android:id="@+id/mail_Address"
-        android:layout_width="172dp"
-        android:layout_height="19.77dp"
-        android:layout_marginLeft="30dp"
+        android:layout_width="0dp"
+        android:layout_height="20dp"
         android:layout_marginTop="441dp"
-        android:layout_marginRight="173dp"
         android:layout_marginBottom="383dp"
         android:background="@null"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintRight_toRightOf="@id/gn_guideline2"
+        app:layout_constraintLeft_toLeftOf="@id/gn_guideline1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         />
 
     <View
-        android:layout_width="315dp"
+        android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="474dp"
         android:layout_marginBottom="369.9dp"
         android:background="@color/black_two"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintRight_toRightOf="@id/gn_guideline2"
+        app:layout_constraintLeft_toLeftOf="@id/gn_guideline1"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:gravity="left"
         android:textColor="@color/dark_blue_grey"
-        android:textSize="10sp"
+        android:textSize="15dp"
         android:lineHeight="10sp"
         style="@style/TextStyle19"
-        android:layout_width="70dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
         android:layout_marginTop="506.7dp"
-        android:layout_marginRight="277dp"
         android:text="PASSWORD"
         android:layout_marginBottom="327dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintRight_toRightOf="@id/gn_guideline2"
+        app:layout_constraintLeft_toLeftOf="@id/gn_guideline1"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/edtpassword"
         android:inputType="textPassword"
-        android:layout_width="70dp"
+        android:layout_width="0dp"
         android:layout_height="19.77dp"
-        android:layout_marginLeft="30dp"
         android:layout_marginTop="533dp"
-        android:layout_marginRight="270dp"
         android:layout_marginBottom="301dp"
         android:background="@null"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintRight_toRightOf="@id/gn_guideline2"
+        app:layout_constraintLeft_toLeftOf="@id/gn_guideline1"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         />
     <View
-        android:layout_width="315dp"
+        android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="560dp"
         android:layout_marginBottom="283.5dp"
         android:background="@color/black_two"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintRight_toRightOf="@id/gn_guideline2"
+        app:layout_constraintLeft_toLeftOf="@id/gn_guideline1"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_sign_up"
         android:text="Sign up"
         android:background="@drawable/btn_signin"
-        android:layout_width="315dp"
+        android:layout_width="0dp"
         android:layout_height="52dp"
         android:layout_marginTop="613dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
         android:layout_marginBottom="176dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintRight_toRightOf="@id/gn_guideline2"
+        app:layout_constraintLeft_toLeftOf="@id/gn_guideline1"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
